# serializer version: 1
# name: TestTransformationMethod.test_to_occurrence[False-event]
  '''
  ,event_type,provider,__OCCURRENCE__
  0,CONSULTATION,RADIOLOGIST,2
  1,EMERGENCY,LABORATORY,1
  2,EMERGENCY,NURSE,2
  3,EXAM,GENERAL_PRACTITIONER,1
  4,FOLLOW_UP,LABORATORY,1
  5,FOLLOW_UP,NURSE,2
  6,FOLLOW_UP,SPECIALIST,1
  7,VACCINATION,RADIOLOGIST,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[False-interval]
  '''
  ,medication,administration_route,dosage,__OCCURRENCE__
  0,ANTIBIOTIC,INHALATION,3,1
  1,ANTIHYPERTENSIVE,ORAL,2,1
  2,PAIN_RELIEVER,ORAL,2,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[False-state]
  '''
  ,health_state,condition,__OCCURRENCE__
  0,CHRONIC_MONITORING,NEUROLOGICAL,1
  1,CONVALESCENCE,CARDIAC,1
  2,REMISSION,CARDIAC,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[True-event]
  '''
  ,patient_id,event_type,provider,__OCCURRENCE__
  0,3,CONSULTATION,RADIOLOGIST,2
  1,3,EMERGENCY,LABORATORY,1
  2,3,EMERGENCY,NURSE,2
  3,3,EXAM,GENERAL_PRACTITIONER,1
  4,3,FOLLOW_UP,LABORATORY,1
  5,3,FOLLOW_UP,NURSE,2
  6,3,FOLLOW_UP,SPECIALIST,1
  7,3,VACCINATION,RADIOLOGIST,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__OCCURRENCE__
  0,3,ANTIBIOTIC,INHALATION,3,1
  1,3,ANTIHYPERTENSIVE,ORAL,2,1
  2,3,PAIN_RELIEVER,ORAL,2,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[True-state]
  '''
  ,patient_id,health_state,condition,__OCCURRENCE__
  0,3,CHRONIC_MONITORING,NEUROLOGICAL,1
  1,3,CONVALESCENCE,CARDIAC,1
  2,3,REMISSION,CARDIAC,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[False-event]
  '''
  ,event_type,provider,__FREQUENCY__
  0,CONSULTATION,RADIOLOGIST,0.18181818181818182
  1,EMERGENCY,LABORATORY,0.09090909090909091
  2,EMERGENCY,NURSE,0.18181818181818182
  3,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  4,FOLLOW_UP,LABORATORY,0.09090909090909091
  5,FOLLOW_UP,NURSE,0.18181818181818182
  6,FOLLOW_UP,SPECIALIST,0.09090909090909091
  7,VACCINATION,RADIOLOGIST,0.09090909090909091
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[False-interval]
  '''
  ,medication,administration_route,dosage,__FREQUENCY__
  0,ANTIBIOTIC,INHALATION,3,0.3333333333333333
  1,ANTIHYPERTENSIVE,ORAL,2,0.3333333333333333
  2,PAIN_RELIEVER,ORAL,2,0.3333333333333333
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[False-state]
  '''
  ,health_state,condition,__FREQUENCY__
  0,CHRONIC_MONITORING,NEUROLOGICAL,0.3333333333333333
  1,CONVALESCENCE,CARDIAC,0.3333333333333333
  2,REMISSION,CARDIAC,0.3333333333333333
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[True-event]
  '''
  ,patient_id,event_type,provider,__FREQUENCY__
  0,3,CONSULTATION,RADIOLOGIST,0.18181818181818182
  1,3,EMERGENCY,LABORATORY,0.09090909090909091
  2,3,EMERGENCY,NURSE,0.18181818181818182
  3,3,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  4,3,FOLLOW_UP,LABORATORY,0.09090909090909091
  5,3,FOLLOW_UP,NURSE,0.18181818181818182
  6,3,FOLLOW_UP,SPECIALIST,0.09090909090909091
  7,3,VACCINATION,RADIOLOGIST,0.09090909090909091
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__FREQUENCY__
  0,3,ANTIBIOTIC,INHALATION,3,0.3333333333333333
  1,3,ANTIHYPERTENSIVE,ORAL,2,0.3333333333333333
  2,3,PAIN_RELIEVER,ORAL,2,0.3333333333333333
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[True-state]
  '''
  ,patient_id,health_state,condition,__FREQUENCY__
  0,3,CHRONIC_MONITORING,NEUROLOGICAL,0.3333333333333333
  1,3,CONVALESCENCE,CARDIAC,0.3333333333333333
  2,3,REMISSION,CARDIAC,0.3333333333333333
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_default[event]
  '''
  patient_id,event_type,provider,__RELATIVE_RANK__
  3,CONSULTATION,RADIOLOGIST,0
  3,FOLLOW_UP,NURSE,1
  3,FOLLOW_UP,LABORATORY,2
  3,CONSULTATION,,3
  3,EMERGENCY,,4
  3,EMERGENCY,NURSE,5
  3,EMERGENCY,NURSE,6
  3,FOLLOW_UP,NURSE,7
  3,EXAM,GENERAL_PRACTITIONER,8
  3,VACCINATION,RADIOLOGIST,9
  3,FOLLOW_UP,SPECIALIST,10
  3,EMERGENCY,LABORATORY,11
  3,CONSULTATION,RADIOLOGIST,12
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_default[interval]
  '''
  patient_id,medication,administration_route,dosage,__RELATIVE_RANK__
  3,ANTIBIOTIC,INHALATION,3,
  3,PAIN_RELIEVER,ORAL,2,
  3,ANTIHYPERTENSIVE,ORAL,2,
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_default[state]
  '''
  patient_id,health_state,condition,__RELATIVE_RANK__
  3,CONVALESCENCE,CARDIAC,
  3,CHRONIC_MONITORING,NEUROLOGICAL,
  3,REMISSION,CARDIAC,
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_modified[event]
  '''
  patient_id,event_type,provider,__RELATIVE_RANK__
  3,CONSULTATION,RADIOLOGIST,-2
  3,FOLLOW_UP,NURSE,-1
  3,FOLLOW_UP,LABORATORY,0
  3,CONSULTATION,,1
  3,EMERGENCY,,2
  3,EMERGENCY,NURSE,3
  3,EMERGENCY,NURSE,4
  3,FOLLOW_UP,NURSE,5
  3,EXAM,GENERAL_PRACTITIONER,6
  3,VACCINATION,RADIOLOGIST,7
  3,FOLLOW_UP,SPECIALIST,8
  3,EMERGENCY,LABORATORY,9
  3,CONSULTATION,RADIOLOGIST,10
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_modified[interval]
  '''
  patient_id,medication,administration_route,dosage,__RELATIVE_RANK__
  3,ANTIBIOTIC,INHALATION,3,-2
  3,PAIN_RELIEVER,ORAL,2,-1
  3,ANTIHYPERTENSIVE,ORAL,2,0
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_modified[state]
  '''
  patient_id,health_state,condition,__RELATIVE_RANK__
  3,CONVALESCENCE,CARDIAC,-2
  3,CHRONIC_MONITORING,NEUROLOGICAL,-1
  3,REMISSION,CARDIAC,0
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_granularity_modified[event]
  '''
  patient_id,date,event_type,provider
  3,0.0,CONSULTATION,RADIOLOGIST
  3,120.0,FOLLOW_UP,NURSE
  3,312.0,FOLLOW_UP,LABORATORY
  3,888.0,CONSULTATION,
  3,1272.0,EMERGENCY,
  3,2592.0,EMERGENCY,NURSE
  3,3456.0,EMERGENCY,NURSE
  3,4776.0,FOLLOW_UP,NURSE
  3,4872.0,EXAM,GENERAL_PRACTITIONER
  3,5376.0,VACCINATION,RADIOLOGIST
  3,5496.0,FOLLOW_UP,SPECIALIST
  3,6264.0,EMERGENCY,LABORATORY
  3,7584.0,CONSULTATION,RADIOLOGIST
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_granularity_modified[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,,,ANTIBIOTIC,INHALATION,3
  3,,,PAIN_RELIEVER,ORAL,2
  3,,,ANTIHYPERTENSIVE,ORAL,2
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_granularity_modified[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  3,,,CONVALESCENCE,CARDIAC
  3,,,CHRONIC_MONITORING,NEUROLOGICAL
  3,,,REMISSION,CARDIAC
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_default[event]
  '''
  patient_id,date,event_type,provider
  3,0.0,CONSULTATION,RADIOLOGIST
  3,5.0,FOLLOW_UP,NURSE
  3,13.0,FOLLOW_UP,LABORATORY
  3,37.0,CONSULTATION,
  3,53.0,EMERGENCY,
  3,108.0,EMERGENCY,NURSE
  3,144.0,EMERGENCY,NURSE
  3,199.0,FOLLOW_UP,NURSE
  3,203.0,EXAM,GENERAL_PRACTITIONER
  3,224.0,VACCINATION,RADIOLOGIST
  3,229.0,FOLLOW_UP,SPECIALIST
  3,261.0,EMERGENCY,LABORATORY
  3,316.0,CONSULTATION,RADIOLOGIST
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_default[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,,,ANTIBIOTIC,INHALATION,3
  3,,,PAIN_RELIEVER,ORAL,2
  3,,,ANTIHYPERTENSIVE,ORAL,2
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_default[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  3,,,CONVALESCENCE,CARDIAC
  3,,,CHRONIC_MONITORING,NEUROLOGICAL
  3,,,REMISSION,CARDIAC
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_modified[event]
  '''
  patient_id,date,event_type,provider
  3,-13.0,CONSULTATION,RADIOLOGIST
  3,-8.0,FOLLOW_UP,NURSE
  3,0.0,FOLLOW_UP,LABORATORY
  3,24.0,CONSULTATION,
  3,40.0,EMERGENCY,
  3,95.0,EMERGENCY,NURSE
  3,131.0,EMERGENCY,NURSE
  3,186.0,FOLLOW_UP,NURSE
  3,190.0,EXAM,GENERAL_PRACTITIONER
  3,211.0,VACCINATION,RADIOLOGIST
  3,216.0,FOLLOW_UP,SPECIALIST
  3,248.0,EMERGENCY,LABORATORY
  3,303.0,CONSULTATION,RADIOLOGIST
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_modified[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  3,-178.0,-169.0,ANTIBIOTIC,INHALATION,3
  3,-16.0,11.0,PAIN_RELIEVER,ORAL,2
  3,0.0,23.0,ANTIHYPERTENSIVE,ORAL,2
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_modified[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  3,-348.0,-254.0,CONVALESCENCE,CARDIAC
  3,-254.0,0.0,CHRONIC_MONITORING,NEUROLOGICAL
  3,0.0,16.0,REMISSION,CARDIAC
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[False-event]
  '''
  ,event_type,provider,__TIME_PROPORTION__
  0,CONSULTATION,RADIOLOGIST,0.18181818181818182
  1,EMERGENCY,LABORATORY,0.09090909090909091
  2,EMERGENCY,NURSE,0.18181818181818182
  3,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  4,FOLLOW_UP,LABORATORY,0.09090909090909091
  5,FOLLOW_UP,NURSE,0.18181818181818182
  6,FOLLOW_UP,SPECIALIST,0.09090909090909091
  7,VACCINATION,RADIOLOGIST,0.09090909090909091
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[False-interval]
  '''
  ,medication,administration_route,dosage,__TIME_PROPORTION__
  0,ANTIBIOTIC,INHALATION,3,0.15254237288135594
  1,ANTIHYPERTENSIVE,ORAL,2,0.3898305084745763
  2,PAIN_RELIEVER,ORAL,2,0.4576271186440678
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[False-state]
  '''
  ,health_state,condition,__TIME_PROPORTION__
  0,CHRONIC_MONITORING,NEUROLOGICAL,0.6978021978021978
  1,CONVALESCENCE,CARDIAC,0.25824175824175827
  2,REMISSION,CARDIAC,0.04395604395604396
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[True-event]
  '''
  ,patient_id,event_type,provider,__TIME_PROPORTION__
  0,3,CONSULTATION,RADIOLOGIST,0.18181818181818182
  1,3,EMERGENCY,LABORATORY,0.09090909090909091
  2,3,EMERGENCY,NURSE,0.18181818181818182
  3,3,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  4,3,FOLLOW_UP,LABORATORY,0.09090909090909091
  5,3,FOLLOW_UP,NURSE,0.18181818181818182
  6,3,FOLLOW_UP,SPECIALIST,0.09090909090909091
  7,3,VACCINATION,RADIOLOGIST,0.09090909090909091
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__TIME_PROPORTION__
  0,3,ANTIBIOTIC,INHALATION,3,0.15254237288135594
  1,3,ANTIHYPERTENSIVE,ORAL,2,0.3898305084745763
  2,3,PAIN_RELIEVER,ORAL,2,0.4576271186440678
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[True-state]
  '''
  ,patient_id,health_state,condition,__TIME_PROPORTION__
  0,3,CHRONIC_MONITORING,NEUROLOGICAL,0.6978021978021978
  1,3,CONVALESCENCE,CARDIAC,0.25824175824175827
  2,3,REMISSION,CARDIAC,0.04395604395604396
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[False-event]
  '''
  ,event_type,provider,__TIME_SPENT__
  0,CONSULTATION,RADIOLOGIST,2
  1,EMERGENCY,LABORATORY,1
  2,EMERGENCY,NURSE,2
  3,EXAM,GENERAL_PRACTITIONER,1
  4,FOLLOW_UP,LABORATORY,1
  5,FOLLOW_UP,NURSE,2
  6,FOLLOW_UP,SPECIALIST,1
  7,VACCINATION,RADIOLOGIST,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[False-interval]
  '''
  ,medication,administration_route,dosage,__TIME_SPENT__
  0,ANTIBIOTIC,INHALATION,3,9.0
  1,ANTIHYPERTENSIVE,ORAL,2,23.0
  2,PAIN_RELIEVER,ORAL,2,27.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[False-state]
  '''
  ,health_state,condition,__TIME_SPENT__
  0,CHRONIC_MONITORING,NEUROLOGICAL,254.0
  1,CONVALESCENCE,CARDIAC,94.0
  2,REMISSION,CARDIAC,16.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[True-event]
  '''
  ,patient_id,event_type,provider,__TIME_SPENT__
  0,3,CONSULTATION,RADIOLOGIST,2
  1,3,EMERGENCY,LABORATORY,1
  2,3,EMERGENCY,NURSE,2
  3,3,EXAM,GENERAL_PRACTITIONER,1
  4,3,FOLLOW_UP,LABORATORY,1
  5,3,FOLLOW_UP,NURSE,2
  6,3,FOLLOW_UP,SPECIALIST,1
  7,3,VACCINATION,RADIOLOGIST,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__TIME_SPENT__
  0,3,ANTIBIOTIC,INHALATION,3,9.0
  1,3,ANTIHYPERTENSIVE,ORAL,2,23.0
  2,3,PAIN_RELIEVER,ORAL,2,27.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[True-state]
  '''
  ,patient_id,health_state,condition,__TIME_SPENT__
  0,3,CHRONIC_MONITORING,NEUROLOGICAL,254.0
  1,3,CONVALESCENCE,CARDIAC,94.0
  2,3,REMISSION,CARDIAC,16.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[False-event-entity_features0]
  '''
  ,provider,__TIME_SPENT__
  0,GENERAL_PRACTITIONER,1
  1,LABORATORY,2
  2,NURSE,4
  3,RADIOLOGIST,3
  4,SPECIALIST,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[False-interval-entity_features2]
  '''
  ,medication,administration_route,__TIME_SPENT__
  0,ANTIBIOTIC,INHALATION,9.0
  1,ANTIHYPERTENSIVE,ORAL,23.0
  2,PAIN_RELIEVER,ORAL,27.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[False-state-entity_features1]
  '''
  ,health_state,__TIME_SPENT__
  0,CHRONIC_MONITORING,254.0
  1,CONVALESCENCE,94.0
  2,REMISSION,16.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[True-event-entity_features0]
  '''
  ,patient_id,provider,__TIME_SPENT__
  0,3,GENERAL_PRACTITIONER,1
  1,3,LABORATORY,2
  2,3,NURSE,4
  3,3,RADIOLOGIST,3
  4,3,SPECIALIST,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[True-interval-entity_features2]
  '''
  ,patient_id,medication,administration_route,__TIME_SPENT__
  0,3,ANTIBIOTIC,INHALATION,9.0
  1,3,ANTIHYPERTENSIVE,ORAL,23.0
  2,3,PAIN_RELIEVER,ORAL,27.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[True-state-entity_features1]
  '''
  ,patient_id,health_state,__TIME_SPENT__
  0,3,CHRONIC_MONITORING,254.0
  1,3,CONVALESCENCE,94.0
  2,3,REMISSION,16.0
  
  '''
# ---
